docs/0.6/_sources/api/gammapy.irf.EffectiveAreaTable2D.rst.txt


EffectiveAreaTable2D
================================

.. currentmodule:: gammapy.irf

.. autoclass:: EffectiveAreaTable2D
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~EffectiveAreaTable2D.default_interp_kwargs
      ~EffectiveAreaTable2D.energy
      ~EffectiveAreaTable2D.high_threshold
      ~EffectiveAreaTable2D.low_threshold
      ~EffectiveAreaTable2D.offset

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~EffectiveAreaTable2D.from_hdulist
      ~EffectiveAreaTable2D.from_table
      ~EffectiveAreaTable2D.peek
      ~EffectiveAreaTable2D.plot
      ~EffectiveAreaTable2D.plot_energy_dependence
      ~EffectiveAreaTable2D.plot_offset_dependence
      ~EffectiveAreaTable2D.read
      ~EffectiveAreaTable2D.to_effective_area_table

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: energy
   .. autoattribute:: high_threshold
   .. autoattribute:: low_threshold
   .. autoattribute:: offset

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: peek
   .. automethod:: plot
   .. automethod:: plot_energy_dependence
   .. automethod:: plot_offset_dependence
   .. automethod:: read
   .. automethod:: to_effective_area_table

   
   